# clinical-llm-bias-audit

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
app/: dashboard.py
datasets/oncqa/: MANIFEST.md
docs/: labeling_rubric.md
docs/assets/: architecture.html
scripts/: per_region_gdi.py  power_analysis.py  reannotate.py
scripts/figs/: fig2_gdi_heatmap.py
src/geobias/: __init__.py  cli.py
tests/: test_metrics.py  test_perturb.py
