[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geobias"
version = "0.1.0"
description = "Audit clinical LLMs for geographic and cultural bias — the Geographic Disparity Index (GDI)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "fairness", "bias-audit", "responsible-ai", "clinical-nlp", "healthcare", "evaluation"]
authors = [{ name = "Taimoor Karim" }]

# Core stays deliberately tiny: the audit engine + stats are stdlib; boto3 is the
# only hard dependency (AWS Bedrock provider). OpenAI/Groq use stdlib urllib.
dependencies = ["boto3>=1.34"]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6"]
dashboard = ["streamlit>=1.33", "matplotlib>=3.8", "numpy>=1.26"]
dev = ["pytest>=8.0"]
all = ["geobias[api,dashboard,dev]"]

[project.scripts]
geobias = "geobias.cli:main"

[project.urls]
Homepage = "https://github.com/tkarim45/clinical-llm-bias-audit"

[tool.hatch.build.targets.wheel]
packages = ["src/geobias"]
